Change in the header tag code to display the logo image

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
             <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="keywords" content="site, computador, landing, home, serviços, contato">
             <meta name="description" content="Landing page de um site de vendas de notebooks e desktops. Aqui você encontrará tudo sobre nossos produtos, nossa localização e muito mais.">
@@ -15,7 +16,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="../index.html"><img class="logo-image" src="/assets/imagem-logo.png" alt="imagem-logo"></a>
+                <a href="../index.html"><img class="logo-image" src="../assets/imagem-logo.png" alt="imagem-logo"></a>
             </div>
              <nav class="header-menu">
                 <ul class="list-itens">
